--- a/00_Starter/style.css
+++ b/00_Starter/style.css
@@ -13,3 +13,21 @@ body {
     overflow: hidden;
     margin: 0;
 }
+
+
+
+@import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
+* {
+    box-sizing: border-box;
+}
+
+body {
+    font-family: 'Muli', sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    overflow: hidden;
+    margin: 0;
+}
