--- a/DAY1 - Expanding Cards/style.css
+++ b/DAY1 - Expanding Cards/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
 
 * {
   box-sizing: border-box;
@@ -26,10 +27,10 @@ body {
     border-radius: 50px;
     color: #fff;
     cursor: pointer;
-  flex: 0.5;
-  margin: 10px;
-  position: relative;
-  transition: all 900ms ease-in;
+    flex: 0.5;
+    margin: 10px;
+    position: relative;
+    transition: all 900ms ease-in;
 }
 
 .panel h3 {
