--- a/DAY5 - Blurry Loading/style.css
+++ b/DAY5 - Blurry Loading/style.css
@@ -1,33 +1,31 @@
 @import url('https://fonts.googleapis.com/css?family=Ubuntu');
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    font-family: 'Ubuntu', sans-serif;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    overflow: hidden;
-    margin: 0;
+  font-family: 'Ubuntu', sans-serif;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  overflow: hidden;
+  margin: 0;
 }
 
-
 .bg {
-    background: url('bg.jpg')
-    no-repeat center center/cover;
-    position: absolute;
-    top: -30px;
-    left:-30px;
-    width: calc(100vw + 60px );
-    height: calc(100vh + 60px);
-    filter: blur(30px);
-    z-index: -1;
-}  
+  background: url('bg.jpg') no-repeat center center/cover;
+  position: absolute;
+  top: -30px;
+  left: -30px;
+  width: calc(100vw + 60px);
+  height: calc(100vh + 60px);
+  filter: blur(30px);
+  z-index: -1;
+}
 
 .loading-text {
-    font-size: 50px;
-    color: #fff;
+  font-size: 50px;
+  color: #fff;
 }
